Author: Fix Author Name Alignment on Mobile

--- a/widgets/author-box/styles/default.less
+++ b/widgets/author-box/styles/default.less
@@ -68,14 +68,6 @@
 
 	@media (max-width: @responsive_breakpoint) {
 		text-align: center;
-
-		&-avatar {
-			margin-bottom: 15px;
-		}
-
-		&-title-wrapper {
-			justify-content: center;
-		}
 	}
 
 	&-avatar .avatar {
@@ -91,7 +83,6 @@
 			justify-content: end;
 		}
 	}
-
 
 	&-title {
 		font-family: @name_font;
@@ -157,6 +148,16 @@
 			&:focus {
 				color: @bio_link_hover;
 			}
+		}
+	}
+
+	@media (max-width: @responsive_breakpoint) {
+		&-avatar {
+			margin-bottom: 15px;
+		}
+
+		&-title-wrapper {
+			justify-content: center;
 		}
 	}
 }
